# go-vue-template

./: .gitignore  Makefile  README.md  go-vue-template.yaml  go.mod  go.sum  main.go
asset/: embed.go
cmd/: root.go
core/: settings.go
core/controller/: admin_controller.go  test_controller.go
core/middlewares/: filter.go
core/middlewares/jwt/framework/: framework.go
core/middlewares/jwt/services/: token.go  user.go
core/model/admin/: admin.go
core/model/test/: test.go
core/pages/: embed.go
core/router/: router.go
d2admin/: package-lock.json  vue.config.js
d2admin/src/api/: table.js
d2admin/src/menu/modules/: demo-playground.js
d2admin/src/router/modules/: playground.js
d2admin/src/views/system/index/: index.vue
frontend/: .env.development  babel.config.js  package.json  vue.config.js
frontend/public/: splashscreen.html
frontend/src/: permission.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/migrations/2022-10-12-161702_create_posts/: up.sql
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/pkg/: mod.rs
frontend/src-tauri/src/pkg/cmds/: command.rs
frontend/src-tauri/src/pkg/db/: dbs.rs  mod.rs
frontend/src-tauri/src/pkg/lib/: lib.rs  mod.rs  models.rs
frontend/src-tauri/src/web/: mod.rs
frontend/src/api/: table.js  user.js
frontend/src/router/: index.js
frontend/src/store/modules/: user.js
frontend/src/utils/: auth.js  request.js
frontend/src/views/dashboard/: index.vue
frontend/src/views/table/: index.vue
pkg/auth/: local.go
tls/rsa/: rsa.go
(+2 files in other folders)
