[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools", "system-tray"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
axum = "0.3"
tokio = { version="1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
state = { version = "0.5" }
chrono = "*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

